# session-types

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: rust.yml
examples/: arithmetic.rs  atm.rs  connect.rs  echo-server.rs  generic.rs  hselect.rs  many-clients.rs  planeclip.rs  ticket_ordering.rs  try-offer.rs
src/: lib.rs
src/branch_impls/: Cargo.toml
src/branch_impls/src/: lib.rs
tests/: chan_select.rs  drop_server.rs  pop.rs  send-recv.rs  send_recv.rs  tests.rs  try_recv.rs
tests/compile-fail/: cannot-impl-hasdual.rs  complete.rs  incompatible-sessions.rs  issue-8.rs  no-aliasing.rs  send-on-recv.rs
