[package]
name = "session_types"
version = "0.2.0"
authors = [ "Philip Munksgaard <pmunksgaard@gmail.com>"
          , "Thomas Bracht Laumann Jespersen <laumann.thomas@gmail.com>"
          ]

description = "An implementation of session types in Rust"
repository = "https://github.com/Munksgaard/session-types"
readme = "README.md"
keywords = ["session", "types", "channels", "concurrency", "communication"]

license = "MIT"

[dev-dependencies]
rand = "0.5.5"

[features]
default = []
chan_select = ["compiletest_rs"]

[dependencies]
compiletest_rs = { version = "0.3.11", optional = true }
