[package]
name = "session_types"
version = "0.2.0"
authors = [ "Philip Munksgaard <pmunksgaard@gmail.com>"
          , "Thomas Bracht Laumann Jespersen <laumann.thomas@gmail.com>"
          ]

description = "An implementation of session types in Rust"
repository = "https://github.com/Munksgaard/session-types"
readme = "README.md"
keywords = ["session", "types", "channels", "concurrency", "communication"]

license = "MIT"

[dependencies]
crossbeam-channel = { git = "https://github.com/stjepang/crossbeam", branch = "select-ready" }

[dev-dependencies]
compiletest_rs = { version = "0.3.16", features = ["stable"] }
rand = "0.5.5"

[features]
default = []
chan_select = []
